# opencv-eyetrack-scroll

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: __main__.py  cli.py  color.py  type.py
src/eye/: eye_detect.py
src/eye_tracking/: test.py
src/face/: face_detect.py
src/mouse/: mouse_controller.py  scroll.py
tests/: test_cli.py
